tests/libtracker-data/error/Makefile.am
include $(top_srcdir)/Makefile.decl

EXTRA_DIST += \
	test.ontology                                  \
	query-error-1.out                              \
	query-error-1.rq                               \
	query-error-1.ttl                              \
	query-error-2.out                              \
	query-error-2.rq                               \
	query-error-2.ttl                              \
	update-error-1.rq                              \
	update-error-query-1.out                       \
	update-error-query-1.rq

